fix: update sidebar links and spacing

--- a/docs/.vitepress/theme/sidebar.css
+++ b/docs/.vitepress/theme/sidebar.css
@@ -29,7 +29,7 @@
 }
 
 .VPSidebar .VPSidebarItem.level-0 > .item {
-  margin-bottom: 4px;
+  margin-bottom: 8px;
 }
 
 .VPSidebar .VPSidebarItem.level-0 > .item > .text {
@@ -57,7 +57,7 @@
   padding: 0;
   font-size: 14px;
   font-weight: 400;
-  line-height: 22px;
+  line-height: 24px;
   color: var(--vp-c-text-2);
 }
 
@@ -74,19 +74,19 @@
   color: var(--vp-c-brand-1);
 }
 
-.VPSidebar
+/* .VPSidebar
   .VPSidebarItem.level-1.is-link
   > .item
   > .link:hover {
   background-color: var(--vp-c-default-soft);
-}
+} */
 
-.VPSidebar
+/* .VPSidebar
   .VPSidebarItem.level-1.is-active
   > .item
   > .link {
   background-color: var(--vp-c-brand-soft);
-}
+} */
 
 .VPSidebar
   .VPSidebarItem.level-1.is-active
@@ -112,13 +112,13 @@
   }
 
   .VPSidebar .VPSidebarItem.level-1 > .item > .link {
-    min-height: 28px;
+    min-height: 23px;
   }
 
   .VPSidebar
     .VPSidebarItem.level-1
     + .VPSidebarItem.level-1 {
-    margin-top: 2px;
+    margin-top: 6px;
   }
 
   .VPSidebar .VPSidebarItem.level-1 > .item > .link > .text {
